# src/controllers/movie-controller.ts
@@ -9,24 +9,24 @@ export const addMovie = async (req: Request, res: Response) => {
     const { body } = req;
     const paramsUserId = req.params.userId;
     const { file } = req;
-    console.log(file);
 
     if (!file) {
       return res.status(400).json({ message: "image did not upload" });
     }
-
-    const validator = await addMovieSchema({
-      ...body,
+    const transform = {
+      year: body.year,
+      name: { eng: body.name_eng, geo: body.name_geo },
+      director: { eng: body.director_eng, geo: body.director_geo },
+      description: { eng: body.description_eng, geo: body.description_geo },
       userId: paramsUserId,
       poster: "/storage/" + file.filename,
-    });
+      categories: typeof body.categories === "string" ? body.categories.split(",") : body.categories
+    };
+
+    const validator = await addMovieSchema(transform);
 
     const { userId, name, categories, year, poster, director, description } =
-      await validator.validateAsync({
-        ...body,
-        userId: paramsUserId,
-        poster: "/storage/" + file.filename,
-      });
+      await validator.validateAsync(transform);
 
     const user = await User.findOne({ id: userId });
     const id = uuid();
